--- a/SimpleTracker/Resources/layout/content_main.xml
+++ b/SimpleTracker/Resources/layout/content_main.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <include
+            layout="@layout/app_bar"
+            />
+    </LinearLayout>
+        
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -30,13 +39,7 @@
                 android:minWidth="25px"
                 android:id="@+id/stopTrackButton"
                 android:text="@string/button_stop_track" />
-            <Button
-                android:minHeight="25px"
-                android:minWidth="25px"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/routesButton"
-                android:text="@string/button_show_routes" />
+            
         </LinearLayout>
 
         <RelativeLayout
@@ -52,6 +55,26 @@
                 android:text="Hello World!" />
         </RelativeLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:minHeight="25px"
+                android:minWidth="25px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/routesButton"
+                android:text="@string/button_show_routes" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="25dp"
+                android:minWidth="25dp"
+                android:id="@+id/clearAllRoutesButton"
+                android:text="@string/button_clear_routes" />
+        </LinearLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -61,4 +84,5 @@
                 android:id="@+id/routesListView"/>
         </RelativeLayout>
     </LinearLayout>
-</RelativeLayout>
+    
+</LinearLayout>
