--- a/SimpleTracker/Resources/layout/app_bar.xml
+++ b/SimpleTracker/Resources/layout/app_bar.xml
@@ -16,8 +16,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            android:minWidth="25px"
-            android:minHeight="25px">
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            android:elevation="4dp">
 
         </android.support.v7.widget.Toolbar>
 
