--- a/SimpleTracker/Resources/layout/settings.xml
+++ b/SimpleTracker/Resources/layout/settings.xml
@@ -35,9 +35,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/strava_text_na"
-            android:textColor="@android:color/holo_red_dark"
-            android:text="Strava is not installed"
+            android:text="Strava message"
             android:visibility="invisible"
+            android:layout_gravity="center_horizontal"
             />
     </LinearLayout>
 </LinearLayout>
