--- a/SimpleTracker/Resources/layout/content_main.xml
+++ b/SimpleTracker/Resources/layout/content_main.xml
@@ -25,17 +25,23 @@
                 android:text="@string/button_track"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minWidth="25px"
-                android:minHeight="25px"
                 android:id="@+id/trackButton" />
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minHeight="25px"
-                android:minWidth="25px"
                 android:id="@+id/stopTrackButton"
                 android:text="@string/button_stop_track" />
-            
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                />
+             <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/routesButton"
+                android:text="@string/button_show_routes" />
         </LinearLayout>
 
         <RelativeLayout
@@ -50,20 +56,6 @@
                 android:id="@+id/textView1"
                 android:text="Hello World!" />
         </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Button
-                android:minHeight="25px"
-                android:minWidth="25px"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/routesButton"
-                android:text="@string/button_show_routes" />
-            
-        </LinearLayout>
 
         
     </LinearLayout>
